# TranslateItStage

./: .gitignore
translate-it/: README.md  pyproject.toml
translate-it/translate_it/: main.py
